--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "dependencies": {
     "aphrodite": "^2.2.3",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "dotenv": "^6.1.0",
+    "email-validator": "^2.0.4",
     "react": "^16.6.1",
+    "react-datepicker": "^2.0.0",
     "react-dom": "^16.6.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-youtube": "^7.8.0",
     "reactstrap": "^6.5.0"
