--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.1.3",
     "dotenv": "^6.1.0",
     "email-validator": "^2.0.4",
+    "moment": "^2.22.2",
     "react": "^16.6.1",
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.6.1",
