--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.6.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-vis": "^1.11.5",
     "react-youtube": "^7.8.0",
     "reactstrap": "^6.5.0"
   },
