--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.6.1",
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.6.1",
+    "react-ga": "^2.5.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-spring": "^7.0.0",
